--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -14,6 +14,7 @@
     "PopupTitle":{"message": "Twishare to Misskey settings"},
     "ShowUpdateLogLink":{"message": "update log and notifications"},
     "ShareButtonLabel":{"message": "Share this page"},
+    "ShareButtonCaution":{"message": "You can't use this button on Firefox."},
     "Settings":{"message": "Settings"},
     "InstanceNameFormLabel":{"message": "Enter the server domain you want to share with. (Default is misskey.io .)"},
     "InstanceNameFormPlaceHolder":{"message": "Enter the domain"},
